# gba

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  mgba-debug.bat
.github/workflows/: build.yml
src/: agb.cpp  gfx.cpp  gfx.h  main.cpp  math.cpp  math.h  mgba.cpp  pong.cpp  pong.h  print.h  reg.h  song.cpp  song.h  tonc.h  video.h
src/hw/: audio.h  input.h  int.h  mm.h  reg.h  video.h
